Responsive Header and canvas
Nav header is now responsive along with
Background canvas being added.

--- a/HTML/AboutMe.html
+++ b/HTML/AboutMe.html
@@ -18,25 +18,47 @@
             <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
             <input type="checkbox" id="toggle-1">
             <nav>
-                <ul class="navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="AboutMe.html">About Me</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="#ContactMe">Contact</a></li>
-                    <li><a href="#Photos">Photos</a></li>
-                    <li><a href="#Blog">Blog</a></li>
-                </ul>
+                <div class="navigate">
+                    <ul>
+                        <li><a href="../index.html"><i class="icon-home"></i>Home</a></li>
+                        <li><a href="HTML/Portfolio.html">Portfolio</a></li>
+                        <li><a href="#ContactMe">Contact</a></li>
+                        <li><a href="#servicbes">Blog</a></li>
+                        <li><a href="#gallbery">Photos</a></li>
+                        <div class="dropdown">
+                            <button class="dropbtn"><a href ="HTML/AboutMe.html">About Me</a></button>
+                            <div class="dropdown-content">
+                                <a href="#">Background</a>
+                                <a href="#">Work Experience</a>
+                                <a href="#">Skills</a>
+                            </div>
+                    </ul>
+                    </div>
             </nav>
+    </header>
+    <h1 id="About">About Me</h1>
+    <div id="intro-container">
+        <section id="about" class="aboutContent">
+            <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
+                simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy
+                text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            </p>
+    </div>
+    <div id="background-container">
+        <h2 id="Background">Background</h2>
+        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply
+            dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of
+            the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
+    </div>
+    <div id="workExperience-container">
+        <h2 id="WorkExperience">Work Experience</h2>
+        <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply
+            dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of
+            the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+        </p>
 
         </section>
-    </header>
-    <h1>About Me</h1>
-    <section id="about" class="content">
-        <h2>About</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-            It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently
-            with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-    </section>
 </body>
 
-</html>
+</html>s
