--- a/index.html
+++ b/index.html
@@ -23,21 +23,19 @@
                     <ul>
                         <li><a href="index.html"><i class="icon-home"></i>Home</a></li>
                         <li><a href="HTML/Portfolio.html">Portfolio</a></li>
-                        <li><a href="#ContactMe">Contact</a></li>
-                        <li><a href="#servicbes">Blog</a></li>
-                        <li><a href="#gallbery">Photos</a></li>
+                        <li><a href="HTML/ContactMe.html">Contact</a></li>
+                        <li><a href="HTML/Photos.html">Photos</a></li>
                         <div class="dropdown">
                             <button class="dropbtn"><a href ="HTML/AboutMe.html">About Me</a></button>
                             <div class="dropdown-content">
-                                <a href="#">Background</a>
-                                <a href="#">Work Experience</a>
-                                <a href="#">Skills</a>
+                                <a href="HTML/Personal.html">Personal</a>
+                                <a href="HTML/Professional.html">Professional</a>
                             </div>
                     </ul>
                     </div>
             </nav>
+        </section>
     </header>
-
     <div class="name-container">
         <h1 id="myName">Amir Khan</h1>
 
