--- a/HTML/Portfolio.html
+++ b/HTML/Portfolio.html
@@ -5,22 +5,203 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../CSS/style.css">
     <title>Document</title>
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="AboutMe.html">About Me</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="ContactMe.html">Contact</a></li>
-                <li><a href="Photos.html">Photos</a></li>
-                <li><a href="Blog.html">Blog</a></li>
-            </ul>
-        </nav>
+        <section>
+            <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
+            <input type="checkbox" id="toggle-1">
+            <nav>
+                <div class="navigate">
+                    <ul>
+                        <li><a href="../index.html"><i class="icon-home"></i>Home</a></li>
+                        <li><a href="Portfolio.html">Portfolio</a></li>
+                        <li><a href="#ContactMe">Contact</a></li>
+                        <li><a href="#servicbes">Blog</a></li>
+                        <li><a href="#gallbery">Photos</a></li>
+                        <div class="dropdown">
+                            <button class="dropbtn"><a href ="AboutMe.html">About Me</a></button>
+                            <div class="dropdown-content">
+                                <a href="#">Background</a>
+                                <a href="#">Work Experience</a>
+                                <a href="#">Skills</a>
+                            </div>
+                    </ul>
+                    </div>
+            </nav>
+        </section>
     </header>
+    <h1>Time to Have some Fun</h1>
+    <div id="canvas1"></div>
+    <canvas id="Fireworks"></canvas>
+
+    <script>
+        // helper functions
+        const PI2 = Math.PI * 36
+        const random = (min, max) => Math.random() * (max - min + 5) + min | 0
+        const timestamp = _ => new Date().getTime()
+
+        // container
+        class Birthday {
+            constructor() {
+                this.resize();
+                this.fireworks = [];
+                this.counter = 0;
+
+            }
+
+            resize() {
+                this.width = canvas.width = 800;
+                this.height = canvas.height = 600;
+                let center = this.width / 2 | 0
+                this.spawnA = center - center / 2 | 0
+                this.spawnB = center + center / 4 | 0
+                this.spawnC = this.height * .7
+                this.spawnD = this.height * .5
+
+            }
+
+            onClick(evt) {
+                let x = evt.clientX || evt.touches && evt.touches[0].pageX
+                let y = evt.clientY || evt.touches && evt.touches[0].pageY
+
+                let count = random(3, 5)
+                for (let i = 0; i < count; i++) this.fireworks.push(new Firework(
+                    random(this.spawnA, this.spawnB),
+                    this.height,
+                    x,
+                    y,
+                    random(0, 260),
+                    random(30, 110)))
+
+                this.counter = -1
+
+            }
+
+            update(delta) {
+                ctx.globalCompositeOperation = 'hard-light'
+                ctx.fillStyle = `rgba(10,15,2,${ 8 * delta })`
+                ctx.fillRect(0, 0, this.width, this.height)
+
+                ctx.globalCompositeOperation = 'lighter'
+                for (let firework of this.fireworks) firework.update(delta)
+
+                // if enough time passed... create new new firework
+                this.counter += delta * 3 // each second
+                if (this.counter >= 1) {
+                    this.fireworks.push(new Firework(
+                        random(this.spawnA, this.spawnB),
+                        this.height,
+                        random(0, this.width),
+                        random(this.spawnC, this.spawnD),
+                        random(0, 360),
+                        random(30, 110)))
+                    this.counter = 0
+                }
+
+                // remove the dead fireworks
+                if (this.fireworks.length > 1000) this.fireworks = this.fireworks.filter(firework => !firework.dead)
+
+            }
+        }
+
+        class Firework {
+            constructor(x, y, targetX, targetY, shade, offsprings) {
+                this.dead = false
+                this.offsprings = offsprings
+
+                this.x = x
+                this.y = y
+                this.targetX = targetX
+                this.targetY = targetY
+
+                this.shade = shade
+                this.history = []
+            }
+            update(delta) {
+                if (this.dead) return
+
+                let xDiff = this.targetX - this.x
+                let yDiff = this.targetY - this.y
+                if (Math.abs(xDiff) > 3 || Math.abs(yDiff) > 3) { // is still moving
+                    this.x += xDiff * 2 * delta
+                    this.y += yDiff * 2 * delta
+
+                    this.history.push({
+                        x: this.x,
+                        y: this.y
+                    })
+
+                    if (this.history.length > 20) this.history.shift()
+
+                } else {
+                    if (this.offsprings && !this.madeChilds) {
+
+                        let babies = this.offsprings / 2
+                        for (let i = 0; i < babies; i++) {
+                            let targetX = this.x + this.offsprings * Math.cos(PI2 * i / babies) | 0
+                            let targetY = this.y + this.offsprings * Math.sin(PI2 * i / babies) | 0
+
+                            birthday.fireworks.push(new Firework(this.x, this.y, targetX, targetY, this.shade, 0))
+
+                        }
+
+                    }
+                    this.madeChilds = true
+                    this.history.shift()
+                }
+
+                if (this.history.length === 0) this.dead = true
+                else if (this.offsprings) {
+                    for (let i = 0; this.history.length > i; i++) {
+                        let point = this.history[i]
+                        ctx.beginPath()
+                        ctx.fillStyle = 'hsl(' + this.shade + ',100%,' + i + '%)'
+                        ctx.arc(point.x, point.y, 1, 0, PI2, false)
+                        ctx.fill()
+                    }
+                } else {
+                    ctx.beginPath()
+                    ctx.fillStyle = 'hsl(' + this.shade + ',100%,50%)'
+                    ctx.arc(this.x, this.y, 1, 0, PI2, false)
+                    ctx.fill()
+                }
+
+            }
+        }
+
+        let canvas = document.getElementById('Fireworks')
+        let ctx = canvas.getContext('2d')
+
+        let then = timestamp()
+
+        let birthday = new Birthday
+        window.onresize = () => birthday.resize()
+        document.onclick = evt => birthday.onClick(evt)
+        document.ontouchstart = evt => birthday.onClick(evt)
+
+        ;
+        (function loop() {
+            requestAnimationFrame(loop)
+
+            let now = timestamp()
+            let delta = now - then
+
+            then = now
+            birthday.update(delta / 1000)
+
+
+        })()
+    </script>
+
+
 </body>
 
 </html>
+
+<noscript>
+This page will not work without Javascript. If you insist on not using javascript on this site, please visit <a href = "https://codepen.io/amir-khan/">this</a> site to view my portfolio instead
+</noscript>
