Added Photo Gallery
Responsive photo gallery added and nav bar added to portfolio. added a redirect page for About Me

--- a/HTML/Personal.html
+++ b/HTML/Personal.html
@@ -35,6 +35,14 @@
             </nav>
         </section>
     </header>
+    <nav id = "footer">
+        <ul>
+          <li><i></i></li>
+          <li><i></i></li>
+          <li><i></i></li>
+          <li><i></i></li>
+        </ul>
+      </nav>
     <div class="container">
         <ul class="container_list">
             <li>
