--- a/HTML/Portfolio.html
+++ b/HTML/Portfolio.html
@@ -19,24 +19,25 @@
                     <ul>
                         <li><a href="../index.html"><i class="icon-home"></i>Home</a></li>
                         <li><a href="Portfolio.html">Portfolio</a></li>
-                        <li><a href="#ContactMe">Contact</a></li>
-                        <li><a href="#servicbes">Blog</a></li>
-                        <li><a href="#gallbery">Photos</a></li>
+                        <li><a href="ContactMe.html">Contact</a></li>
+                        <li><a href="Photos.html">Photos</a></li>
                         <div class="dropdown">
                             <button class="dropbtn"><a href ="AboutMe.html">About Me</a></button>
                             <div class="dropdown-content">
-                                <a href="#">Background</a>
-                                <a href="#">Work Experience</a>
-                                <a href="#">Skills</a>
-                            </div>
+                                <a href="Personal.html">Personal</a>
+                                <a href="Professional.html">Professional</a>
+                                </div>
                     </ul>
                     </div>
             </nav>
         </section>
     </header>
     <h1>Time to Have some Fun</h1>
-    <div id="canvas1"></div>
+    <div class = "container-flex">
     <canvas id="Fireworks"></canvas>
+    <canvas id = "random-art1"></canvas>
+    </div>
+    
 
     <script>
         // helper functions
