--- a/HTML/Photos.html
+++ b/HTML/Photos.html
@@ -10,8 +10,6 @@
     <link href="https://mverissimo.github.io/tweenslideshow/dist/assets/stylesheet/application.min.css" rel="stylesheet">
     <script src="JS/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
-
     <title>Photos</title>
 </head>
 
@@ -36,46 +34,95 @@
                     </ul>
                     </div>
             </nav>
-        </section>
+        </section>s
     </header>
+    <div class="row"> 
+        <div class="column">
+          <img src="../Assests/Bowie.jpg" style="width:100%">
+          <img src="../Assests/IMG_20180917_203948.jpg" style="width:100%">
+          <img src="../Assests/HeaderBackround.JPG style="width:100%">
+          <img src="../Assests/DarkClock.jpg" style="width:100%">
+          <img src="../Assests/Camera.png" style="width:100%">
+          <img src="../Assests/Robot.jpg" style="width:100%">
+    </div>
 
-    <section id="slider" class="section">
-        <div class="slider">
-            <div class="slider__container">
-                <div class="slider__item slide-burger">
-                    <div class="slider__content grid">
-                        <div class="column">
-                            <h1 class="title">Veggie</h1>
-                            <h1 class="title">Burguer</h1>
-                        </div>
-                        <div class="column"><img src="https://mverissimo.github.io/tweenslideshow/dist/assets/images/burger.png" class="image burger"></div>
-                    </div>
-                </div>
-                <div class="slider__item slide-astronaut">
-                    <div class="slider__content grid">
-                        <div class="column">
-                            <h1 class="title">lost</h1>
-                            <h1 class="title">in space</h1>
-                        </div>
-                        <div class="column"><img src="https://mverissimo.github.io/tweenslideshow/dist/assets/images/astronaut.png" class="image astronaut"></div>
-                    </div>
-                </div>
-                <div class="slider__item slide-coffee">
-                    <div class="slider__content grid">
-                        <div class="column">
-                            <h1 class="title">I Love</h1>
-                            <h1 class="title">Coffee</h1>
-                        </div>
-                        <div class="column"><img src="https://mverissimo.github.io/tweenslideshow/dist/assets/images/cup-2.png" class="image cup"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    <div class="column">
+    <img src="../Assests/Bowie.jpg" style="width:100%">
+    <img src="../Assests/Joy.jpg" style="width:100%">
+    <img src="../Assests/Motivational.jpg" style="width:100%">
+    <img src="../Assests/NoternQuarter.jpg" style="width:100%">
+    <img src="../Assests/SunnyOldham.jpg" style="width:100%">
+  </div> 
+   
+  <div class="column">
+    <img src="../Assests/Bowie.jpg" style="width:100%">
+    <img src="../Assests/Joy.jpg" style="width:100%">
+    <img src="../Assests/Motivational.jpg" style="width:100%">
+    <img src="../Assests/NoternQuarter.jpg" style="width:100%">
+    <img src="../Assests/SunnyOldham.jpg" style="width:100%">
+    <img src="../Assests/TeddyHall.jpg" style="width:100%">
+    
+  </div>
+  
+  <div class="column">
+    <img src="../Assests/Bowie.jpg" style="width:100%">
+    <img src="../Assests/Joy.jpg" style="width:100%">
+    <img src="../Assests/Motivational.jpg" style="width:100%">
+    <img src="../Assests/NoternQuarter.jpg" style="width:100%">
+    <img src="../Assests/SunnyOldham.jpg" style="width:100%">
+    <img src="../Assests/TeddyHall.jpg" style="width:100%">
+  </div>
+</div>
 
+<style>
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+    font-family: Arial;
+  }
+  
+  .header {
+    text-align: center;
+    padding: 32px;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
+</style>
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-<script src="https://mverissimo.github.io/tweenslideshow/dist/assets/javascript/script.min.js"></script>
-
 </html>
