--- a/HTML/Personal.html
+++ b/HTML/Personal.html
@@ -43,44 +43,13 @@
           <li><i></i></li>
         </ul>
       </nav>
-    <div class="container">
-        <ul class="container_list">
-            <li>
-                <a href="#">Movies</a>
-            </li>
-            <li>
-                <a href="#">Games</a>
-            </li>
-            <li>
-                <a href="#">Books</a>
-            </li>
-            <li>
-                <a href="#">Songs</a>
-            </li>
-            <li>
-                <a href="#">Cats</a>
-            </li>
-        </ul>
-    </div>
 
     <body>
-        <h1>Today's your special day!</h1>
-        <button id="reveal">Why's that?</button>
-        <button id="hide">this is a test</button>
-        <div id="ajax-content">
-        </div>
-    </body>
-
-    <script>
-        $('#reveal').on('click', function() {
-            $('#ajax-content').load('../index.html');
-            $('#reveal').hide();
-        })
-
-        $('#hide').on('click', function() {
-            $('#ajax-content').detach('../index.html');
-        })
-    </script>
+        <h1>Movies</h1>
+        <h1>Music</h1>
+        <h1>Games</h1>
+        <h1>Books</h1>
+        <h1>Cats</h1>
 </body>
 
 </html>
