--- a/HTML/Photos.html
+++ b/HTML/Photos.html
@@ -34,43 +34,43 @@
                     </ul>
                     </div>
             </nav>
-        </section>s
+        </section>
     </header>
-    <div class="row"> 
+    <div class="row">
         <div class="column">
-          <img src="../Assests/Bowie.jpg" style="width:100%">
-          <img src="../Assests/IMG_20180917_203948.jpg" style="width:100%">
-          <img src="../Assests/HeaderBackround.JPG style="width:100%">
-          <img src="../Assests/DarkClock.jpg" style="width:100%">
-          <img src="../Assests/Camera.png" style="width:100%">
-          <img src="../Assests/Robot.jpg" style="width:100%">
+            <img src="../Assests/Bowie.jpg" style="width:100%">
+            <img src="../Assests/IMG_20180917_203948.jpg" style="width:100%">
+            <img src="../Assests/HeaderBackround.JPG style=" width:100% ">
+          <img src="../Assests/DarkClock.jpg " style="width:100% ">
+          <img src="../Assests/Camera.png " style="width:100% ">
+          <img src="../Assests/Robot.jpg " style="width:100% ">
     </div>
 
-    <div class="column">
-    <img src="../Assests/Bowie.jpg" style="width:100%">
-    <img src="../Assests/Joy.jpg" style="width:100%">
-    <img src="../Assests/Motivational.jpg" style="width:100%">
-    <img src="../Assests/NoternQuarter.jpg" style="width:100%">
-    <img src="../Assests/SunnyOldham.jpg" style="width:100%">
+    <div class="column ">
+    <img src="../Assests/Bowie.jpg " style="width:100% ">
+    <img src="../Assests/Joy.jpg " style="width:100% ">
+    <img src="../Assests/Motivational.jpg " style="width:100% ">
+    <img src="../Assests/NoternQuarter.jpg " style="width:100% ">
+    <img src="../Assests/SunnyOldham.jpg " style="width:100% ">
   </div> 
    
-  <div class="column">
-    <img src="../Assests/Bowie.jpg" style="width:100%">
-    <img src="../Assests/Joy.jpg" style="width:100%">
-    <img src="../Assests/Motivational.jpg" style="width:100%">
-    <img src="../Assests/NoternQuarter.jpg" style="width:100%">
-    <img src="../Assests/SunnyOldham.jpg" style="width:100%">
-    <img src="../Assests/TeddyHall.jpg" style="width:100%">
+  <div class="column ">
+    <img src="../Assests/Bowie.jpg " style="width:100% ">
+    <img src="../Assests/Joy.jpg " style="width:100% ">
+    <img src="../Assests/Motivational.jpg " style="width:100% ">
+    <img src="../Assests/NoternQuarter.jpg " style="width:100% ">
+    <img src="../Assests/SunnyOldham.jpg " style="width:100% ">
+    <img src="../Assests/TeddyHall.jpg " style="width:100% ">
     
   </div>
   
-  <div class="column">
-    <img src="../Assests/Bowie.jpg" style="width:100%">
-    <img src="../Assests/Joy.jpg" style="width:100%">
-    <img src="../Assests/Motivational.jpg" style="width:100%">
-    <img src="../Assests/NoternQuarter.jpg" style="width:100%">
-    <img src="../Assests/SunnyOldham.jpg" style="width:100%">
-    <img src="../Assests/TeddyHall.jpg" style="width:100%">
+  <div class="column ">
+    <img src="../Assests/Bowie.jpg " style="width:100% ">
+    <img src="../Assests/Joy.jpg " style="width:100% ">
+    <img src="../Assests/Motivational.jpg " style="width:100% ">
+    <img src="../Assests/NoternQuarter.jpg " style="width:100% ">
+    <img src="../Assests/SunnyOldham.jpg " style="width:100% ">
+    <img src="../Assests/TeddyHall.jpg " style="width:100% ">
   </div>
 </div>
 
