--- a/HTML/Professional.html
+++ b/HTML/Professional.html
@@ -38,7 +38,6 @@
         <div class="top"></div>
         <h1 class="About"><span class="AboutSpan">About</span> Me</h1>
         <div class="colour-container">
-            <img src="https://d3n32ilufxuvd1.cloudfront.net/56176d7d4ff02cd032e50c21/1306087/upload-3ac367bb-c0fb-4af1-9835-601bc26e4973.jpg" alt="A vintage 1940's Camera" class="CrossOver">
             <section id="Intro" class="Content">
                 <p class="Text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
                     is simply dummy text of the printing and typesetting industry.
@@ -52,23 +51,53 @@
             <p class="Text-Right"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
                 simply dummy text of the printing and typesetting industry.
             </p>
-            <img src="../Assests/Camera.png" alt="A camera" class="responsive">
         </section>
     </div>
     <h2 class="overlapTitle"><span class="AboutSpan">Work</span> Experience</h2>
     <div class="colour-container">
         <section id="experience" class="Content">
-            <p class="Text-Left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-                simply dummy text of the printing and typesetting industry.
-            </p>
+            <img src="http://placehold.it/70x50">
+            <div class="text-container">
+                <p class="Text-Left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+                    is simply dummy text of the printing and typesetting industry.
+                </p>
+            </div>
         </section>
     </div>
     <h2 class="overlapTitle">Skills</h2>
     <div class="background-container">
-        <section id="experience" class="Content">
-            <p class="Text-Right">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-                simply dummy text of the printing and typesetting industry.
-            </p>
+        <div class="skills">
+            <ul>
+                <li id="skill1">
+                    <p>CSS</p>
+                </li>
+                <li id="skill2">
+                    <p>HTML</p>
+                </li>
+                <li id="skill3">
+                    <p>Javascript</p>
+                </li>
+                <li id="skill4">
+                    <p>f</p>
+                </li>
+                <li id="skill5">
+                    <p>f</p>
+                </li>
+                <li id="skill6">
+                    <p>f</p>
+                </li>
+                <li id="skill7">
+                    <p>f</p>
+                </li>
+                <li id="skill8">
+                    <p>f</p>
+                </li>
+                <li id="skill4">
+                    <p>f</p>
+                </li>
+            </ul>
+        </div>
+
         </section>
 
     </div>
