--- a/HTML/Professional.html
+++ b/HTML/Professional.html
@@ -34,36 +34,20 @@
             </nav>
         </section>
     </header>
-    <div class="image-conatiner">
-        <div class="top"></div>
-        <h1 class="About"><span class="AboutSpan">About</span> Me</h1>
-        <div class="colour-container">
-            <section id="Intro" class="Content">
-                <p class="Text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                    is simply dummy text of the printing and typesetting industry.
-                </p>
-            </section>
-        </div>
+    <h1 class="About"><span class="AboutSpan">About</span> Me</h1>
+    <div class="colour-container">
+        <img src="../Assests/Camera.png" id="test">
+        <p class="Text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply
+            dummy text of the printing and typesetting industry.
+        </p>
     </div>
     <h2 class="overlapTitle">Background</h2>
     <div class="background-container">
-        <section id="background" class="Content">
-            <p class="Text-Right"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-                simply dummy text of the printing and typesetting industry.
-            </p>
-        </section>
+        <p class="Text-Right"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply
+            dummy text of the printing and typesetting industry.
+        </p>
     </div>
     <h2 class="overlapTitle"><span class="AboutSpan">Work</span> Experience</h2>
-    <div class="colour-container">
-        <section id="experience" class="Content">
-            <img src="http://placehold.it/70x50">
-            <div class="text-container">
-                <p class="Text-Left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                    is simply dummy text of the printing and typesetting industry.
-                </p>
-            </div>
-        </section>
-    </div>
     <h2 class="overlapTitle">Skills</h2>
     <div class="background-container">
         <div class="skills">
@@ -100,30 +84,6 @@
 
         </section>
 
-    </div>
-    <h2 class="overlapTitle"><span class="AboutSpan">Volun</span>teering</h2>
-    <div class="colour-container">
-        <section id="experience" class="Content">
-            <p class="Text-Left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-                simply dummy text of the printing and typesetting industry.
-            </p>
-        </section>
-    </div>
-    <h2 class="overlapTitle">Awards</h2>
-    <div class="background-container">
-        <section id="experience" class="Content">
-            <p class="Text-Right">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-                simply dummy text of the printing and typesetting industry.
-            </p>
-        </section>
-    </div>
-    <h2 class="overlapTitle"><span class="AboutSpan">Volun</span>teering</h2>
-    <div class="grey-colour-container">
-        <section id="experience" class="Content">
-            <p class="Text-Left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
-                simply dummy text of the printing and typesetting industry.
-            </p>
-        </section>
     </div>
 </body>
 
