--- a/HTML/Professional.html
+++ b/HTML/Professional.html
@@ -14,7 +14,13 @@
 <body>
     <header>
         <section>
-            <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
+            <label for="toggle-1" class="toggle-menu">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </label>
             <input type="checkbox" id="toggle-1">
             <nav>
                 <div class="navigate">
@@ -24,32 +30,36 @@
                         <li><a href="ContactMe.html">Contact</a></li>
                         <li><a href="Photos.html">Photos</a></li>
                         <div class="dropdown">
-                            <button class="dropbtn"><a href ="AboutMe.html">About Me</a></button>
+                            <button class="dropbtn"><a href="AboutMe.html">About Me</a></button>
                             <div class="dropdown-content">
                                 <a href="Personal.html">Personal</a>
                                 <a href="Professional.html">Professional</a>
                             </div>
                     </ul>
-                    </div>
+                </div>
             </nav>
         </section>
     </header>
     <h1 class="About"><span class="AboutSpan">About</span> Me</h1>
     <div class="colour-container">
         <img src="../Assests/Camera.png" id="test">
-        <p class="Text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply
+        <p class="Text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
+            simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum is simply
             dummy text of the printing and typesetting industry.
         </p>
     </div>
     <h2 class="overlapTitle">Background</h2>
     <div class="background-container">
-        <p class="Text-Right"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply
+        <img src="../Assests/Camera.png" id="test">
+        <p class="Text-Right"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is
+            simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum is simply
             dummy text of the printing and typesetting industry.
         </p>
     </div>
-    <h2 class="overlapTitle"><span class="AboutSpan">Work</span> Experience</h2>
     <h2 class="overlapTitle">Skills</h2>
-    <div class="background-container">
+    <div class="colour-container">
         <div class="skills">
             <ul>
                 <li id="skill1">
