--- a/HTML/AboutMe.html
+++ b/HTML/AboutMe.html
@@ -14,7 +14,13 @@
 <body>
     <header>
         <section>
-            <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
+            <label for="toggle-1" class="toggle-menu">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </label>
             <input type="checkbox" id="toggle-1">
             <nav>
                 <div class="navigate">
@@ -24,13 +30,13 @@
                         <li><a href="ContactMe.html">Contact</a></li>
                         <li><a href="Photos.html">Photos</a></li>
                         <div class="dropdown">
-                            <button class="dropbtn"><a href ="AboutMe.html">About Me</a></button>
+                            <button class="dropbtn"><a href="AboutMe.html">About Me</a></button>
                             <div class="dropdown-content">
                                 <a href="Personal.html">Personal</a>
                                 <a href="Professional.html">Professional</a>
                             </div>
                     </ul>
-                    </div>
+                </div>
             </nav>
         </section>
     </header>
