--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <canvas id="myCanvas"></canvas>
     <header>
         <section>
-            <label for="toggle-1" class="toggle-menu"><ul><li></li> <li></li> <li></li></ul></label>
+            <label for="toggle-1" class="toggle-menu">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </label>
             <input type="checkbox" id="toggle-1">
             <nav>
                 <div class="navigate">
@@ -26,13 +32,13 @@
                         <li><a href="HTML/ContactMe.html">Contact</a></li>
                         <li><a href="HTML/Photos.html">Photos</a></li>
                         <div class="dropdown">
-                            <button class="dropbtn"><a href ="HTML/AboutMe.html">About Me</a></button>
+                            <button class="dropbtn"><a href="HTML/AboutMe.html">About Me</a></button>
                             <div class="dropdown-content">
                                 <a href="HTML/Personal.html">Personal</a>
                                 <a href="HTML/Professional.html">Professional</a>
                             </div>
                     </ul>
-                    </div>
+                </div>
             </nav>
         </section>
     </header>
